# vtk_challenge

./: CMakeLists.txt  README.md  SeismicViewer.cxx  SeismicViewer.h  main.cxx  utils.cxx  utils.h
data/: event_data.csv
scripts/: test_pca.py
src/: utils.cxx
